client/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: client
spec:
  podSelector:
    matchLabels:
      app: client
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: envoy
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy
      ports:
        - port: 80
